--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a href="#menu">Menú</a>
                   <a href="#reviews">Reseñas</a>
                   <a href="#contact">Contáctanos</a>
-                  <!-- <a href="#blogs">Noticias</a> -->
+                  <a href="#blogs">Noticias</a>
 
                </nav>
                <div id="menu-btn" class="fas fa-bars"></div>
@@ -657,7 +657,7 @@
             </div>
             <div class="item menu13">
                <div class="menu__content">
-                  <img src="images/menu/sopas/ajiaco-pequeno.png" alt="" class="menu__img">
+                  <img src="images/menu/sopas/sopa_de_ajiaco.png" alt="" class="menu__img">
                   <h3 class="menu__name"><b>Ajiaco Pequeño</b></h3>
                   <!-- <p class="menu__detail"></p> -->
                   <div class="container">
@@ -1047,8 +1047,8 @@
                   <div class="icons">
                      <i class="fas fa-phone"></i>
                      <h3>Teléfono:</h3>
-                     <p>(601) 615 42 25</p>
-                     <a href="tel:6016154225" target="_blank" class="btn btn-contact">Llamar</a>
+                     <p>(601) 566 79 84</p>
+                     <a href="tel:6015667984" target="_blank" class="btn btn-contact">Llamar</a>
                   </div>
                   <div class="icons">
                      <i class="fas fa-clock"></i>
@@ -1063,79 +1063,47 @@
       <!-- contact section ends -->
 
       <!-- blogs section starts  -->
-      <!-- <section class="blogs" id="blogs">
+      <section class="blogs" id="blogs">
          <div class="heading">
-            <h3 class="blog-title">NOTICIAS</h3>
+            <h3 class="contact-title">NUESTRAS</h3>
+            <h3 class="script-contact">Noticias</h3>
          </div>
          <div class="box-container thumbnails">
             <div class="box">
                <div class="image">
-                  <a href="images/blog-1.jpg" data-lightbox="gallery">
-                     <img src="images/blog-1.jpg" alt="blog-1">
+                  <a href="images/blog/blog-1.jpg" data-lightbox="gallery">
+                     <img src="images/blog/blog-1.jpg" alt="blog-1">
                   </a>
                   <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 4 Mayo, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i> </a>
+                     <a href="#"> <i class="fas fa-calendar"></i> Diciembre 22, 2022 </a>
+                     <a href="#"> <i class="fas fa-user"></i>Asadero JC </a>
                   </div>
                </div>
             </div>
             <div class="box">
                <div class="image">
-                  <a href="images/blog-2.jpg" data-lightbox="gallery">
-                     <img src="images/blog-2.jpg" alt="blog-2">
+                  <a href="images/blog/blog-2.jpg" data-lightbox="gallery">
+                     <img src="images/blog/blog-2.jpg" alt="blog-2">
                   </a>
                   <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 4 Mayo, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i> </a>
+                     <a href="#"> <i class="fas fa-calendar"></i> Diciembre 18, 2022 </a>
+                     <a href="#"> <i class="fas fa-user"></i>Asadero JC </a>
                   </div>
                </div>
             </div>
             <div class="box">
                <div class="image">
-                  <a href="images/blog-3.jpg" data-lightbox="gallery">
-                     <img src="images/blog-3.jpg" alt="blog-3">
+                  <a href="images/blog/blog-3.jpg" data-lightbox="gallery">
+                     <img src="images/blog/blog-3.jpg" alt="blog-3">
                   </a>
                   <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 4 Mayo, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i> </a>
-                  </div>
-               </div>
-            </div>
-            <div class="box">
-               <div class="image">
-                  <a href="images/blog-1.jpg" data-lightbox="gallery">
-                     <img src="images/blog-4.jpg" alt="blog-1">
-                  </a>
-                  <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 27 Abril, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i> </a>
-                  </div>
-               </div>
-            </div>
-            <div class="box">
-               <div class="image">
-                  <a href="images/blog-2.jpg" data-lightbox="gallery">
-                     <img src="images/blog-5.jpg" alt="blog-2">
-                  </a>
-                  <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 27 Abril, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i> </a>
-                  </div>
-               </div>
-            </div>
-            <div class="box">
-               <div class="image">
-                  <a href="images/blog-3.jpg" data-lightbox="gallery">
-                     <img src="images/blog-6.jpg" alt="blog-3">
-                  </a>
-                  <div class="icons">
-                     <a href="#"> <i class="fas fa-calendar"></i> 27 Abril, 2022 </a>
-                     <a href="#"> <i class="fas fa-user"></i>  </a>
+                     <a href="#"> <i class="fas fa-calendar"></i> Diciembre 16, 2022 </a>
+                     <a href="#"> <i class="fas fa-user"></i>Asadero JC </a>
                   </div>
                </div>
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- blogs section ends -->
 
       <!-- footer section starts  -->
@@ -1150,7 +1118,7 @@
                <a href="#menu"><i class="fas fa-angle-right"></i>Menú</a>
                <a href="#reviews"><i class="fas fa-angle-right"></i>Reseñas</a>
                <a href="#contact"><i class="fas fa-angle-right"></i>Contáctanos</a>
-               <!-- <a href="#blogs"><i class="fas fa-angle-right"></i>Noticias</a> -->
+               <a href="#blogs"><i class="fas fa-angle-right"></i>Noticias</a>
             </div>
 
             <div class="box">
